Adding support for JDK 17 and Sakai 25